--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
   "dependencies": {
     "axios": "^1.10.0",
     "cheerio": "^1.1.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0"
   },
   "devDependencies": {
     "@types/cheerio": "^0.22.35",
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/node": "^24.0.3",
     "nodemon": "^3.1.10",
